--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "@clerk/nextjs": "^4.23.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
@@ -22,10 +29,12 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-just-parallax": "^3.1.16",
+    "react-markdown": "^9.0.1",
     "scroll-lock": "^2.1.5",
     "stripe": "^15.4.0",
     "tailwind-merge": "^2.3.0",
-    "zod": "^3.23.5"
+    "zod": "^3.23.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
