import error fixes

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-just-parallax": "^3.1.16",
     "react-markdown": "^9.0.1",
+    "replicate": "^0.29.3",
     "scroll-lock": "^2.1.5",
     "stripe": "^15.4.0",
     "tailwind-merge": "^2.3.0",
