--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "npx prisma generate",
+    "vercel-build": "npx prisma generate && next build"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.0",
